Some Compatibility-Improvements (see descr.) * I18N: More inclusive language-matching. * Styling: City Results no longer displays the x-scrollbar.

--- a/res/index.css
+++ b/res/index.css
@@ -87,6 +87,7 @@ body {
 #citysearch_results {
     max-height: 40vh;
     overflow: scroll;
+    overflow-x: hidden;
 }
 
 #citysearch_input {
